--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <nav>
-        <a href="/" class="logo"><span>Web</span>Studio</a>
+        <a href="/" lang="en"><span>Web</span>Studio</a>
 
         <ul class="main-nav list">
           <li><a href="#">Студія</a></li>
