--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WedStudio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
-        <a href="/" lang="en"><span>Web</span>Studio</a>
+        <a href="/" lang="en" class="logo"><span>Web</span>Studio</a>
         
         <ul>
             <li><a href="#">Студія</a></li>
@@ -106,10 +110,12 @@
     </main>
 
     <footer>
-        <a href="/" lang="en">WebStudio</a>
+        <a href="/" lang="en" ><span>Web</span>Studio</a>
         <address>
-            <ul>
-                <li><a href="https://goo.gl/maps/VcLh4SeBCDLP2WR46" target="_blank" rel="noopener noreferrer nofollow">м. Київ, проспект Лесі Українки,26</a></li>
+            <ul class="list">
+                <li><a href="https://goo.gl/maps/VcLh4SeBCDLP2WR46" 
+                       target="_blank" 
+                       rel="noopener noreferrer nofollow">м. Київ, проспект Лесі Українки,26</a></li>
                 <li><a href="mailto:info@webstudio.com" lang="en">info@webstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
