--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <nav>
-        <a href="/" lang="en"><span>Web</span>Studio</a>
+        <a href="/" lang="en" class="logo"><span>Web</span>Studio</a>
 
         <ul class="main-nav list">
           <li><a href="#">Студія</a></li>
@@ -137,9 +137,9 @@
     </main>
 
     <footer>
-      <a href="/">WebStudio</a>
+      <a href="/" lang="en" ><span>Web</span>Studio</a>
       <address>
-        <ul>
+        <ul class="list">  
           <li>
             <a
               href="https://goo.gl/maps/VcLh4SeBCDLP2WR46"
