--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
             <li><a href="mailto:info@webstudio.com" lang="en">info@webstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
-
     </header>
 
     <main>
    
         <!--Герой-->
     <section>
-        <h1>ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
         
     </section>
@@ -72,9 +71,9 @@
     <section>
         <h2>Чим ми займаємось</h2>
         <ul>
-            <li> <img src="./images/img1.jpg" alt="Пишемо код веб-сторінки" width="370"> </li>
-            <li> <img src="./images/img2.jpg" alt="Сінхронизуємо сторінку на різних пристроях" width="370"> </li>
-            <li> <img src="./images/img3.jpg" alt="віалізуємо веб-магію" width="370"> </li>
+            <li> <img src="./images/img1.jpg" alt="Пишемо код веб-сторінки" width="370" height="294"> </li>
+            <li> <img src="./images/img2.jpg" alt="Сінхронизуємо сторінку на різних пристроях" width="370" height="294"> </li>
+            <li> <img src="./images/img3.jpg" alt="віалізуємо веб-магію" width="370" height="294"> </li>
         </ul>
     </section>
 <!--Наша Команда-->
@@ -84,22 +83,22 @@
        
     <ul>
         <li>
-            <img src="./images/photos/igor.jpg" alt="фотографія члена команди" width="270">
+            <img src="./images/photos/igor.jpg" alt="фотографія члена команди" width="270" height="260">
             <h3>Ігор Дем'яненко</h3>
             <p lang="en">Product Designer</p>
         </li>
         <li>
-            <img src="./images/photos/olga.jpg" alt="фотографія члена команди" width="270">
+            <img src="./images/photos/olga.jpg" alt="фотографія члена команди" width="270" height="260">
             <h3>Ольга Репіна</h3>
             <p lang="en">Frontend Developer</p>
         </li>
         <li>
-            <img src="./images/photos/nik.jpg" alt="фотографія члена команди" width="270">
+            <img src="./images/photos/nik.jpg" alt="фотографія члена команди" width="270" height="260">
             <h3>Микола Тарасов</h3>
             <p lang="en">Marketing</p>
         </li>
         <li>
-            <img src="./images/photos/mishka.jpg" alt="фотографія члена команди" width="270">
+            <img src="./images/photos/mishka.jpg" alt="фотографія члена команди" width="270" height="260">
             <h3>Михайло Ермаков</h3>
             <p lang="en">UI Designer</p>
         </li>
