--- a/portfolio.html
+++ b/portfolio.html
@@ -43,6 +43,7 @@
 
         <ul class="list">
           <li>
+            <article>
             <img
               src="./images/portfolio/img1.jpg"
               alt="Лед-топ з відкритим веб-сайтом"
@@ -51,8 +52,10 @@
             />
             <h3>Техокряк</h3>
             <p>Веб-сайт</p>
+            </article>
           </li>
           <li>
+            <article>
             <img
               src="./images/portfolio/img2.jpg"
               alt="Блок-шот при спробі слем-данку"
@@ -61,8 +64,10 @@
             />
             <h3>Постер New Orlean vs Golden Star</h3>
             <p>Дизайн</p>
+            </article>
           </li>
           <li>
+            <article>
             <img
               src="./images/portfolio/img3.jpg"
               alt="Логотип ресторану Seafood"
@@ -71,8 +76,10 @@
             />
             <h3>Ресторан Seafood</h3>
             <p>Додаток</p>
+            </article>
           </li>
           <li>
+            <article>
             <img
               src="./images/portfolio/img4.jpg"
               alt="Навушники"
@@ -81,8 +88,10 @@
             />
             <h3>Проект Prime</h3>
             <p>Маркетинг</p>
+            </article>
           </li>
           <li>
+            <article>
             <img
               src="./images/portfolio/img5.jpg"
               alt="Дві коробки різних розмірів"
@@ -91,8 +100,10 @@
             />
             <h3>Проект Boxes</h3>
             <p>Додаток</p>
+            </article>
           </li>
           <li>
+            <article>
             <img
               src="./images/portfolio/img6.jpg"
               alt="Монітор з відкритим веб-сайтом"
@@ -101,8 +112,10 @@
             />
             <h3>Inspiration has no Borders</h3>
             <p>Веб-сайт</p>
+            </article>
           </li>
           <li>
+            <article>
             <img
               src="./images/portfolio/img7.jpg"
               alt="Розгорнута книга з картинками"
@@ -111,8 +124,10 @@
             />
             <h3>Издание Limited Edition</h3>
             <p>Дизайн</p>
+            </article>
           </li>
           <li>
+            <article>
             <img
               src="./images/portfolio/img8.jpg"
               alt="Бірка з маркуванням виробу"
@@ -121,8 +136,10 @@
             />
             <h3>Проект LAB</h3>
             <p>Маркетинг</p>
+            </article>
           </li>
           <li>
+            <article>
             <img
               src="./images/portfolio/img9.jpg"
               alt="Лед-топ на екрані якого відбувається процес встановлення десктопного додатку"
@@ -130,7 +147,8 @@
               height="294"
             />
             <h3>Growing Business</h3>
-            <p>Додаток</p>         
+            <p>Додаток</p>
+            </article>         
          </li>
         </ul>
       </section>
