--- a/portfolio.html
+++ b/portfolio.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WedStudio-Портфоліо</title>
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="/" lang="en" class="logo"><span>Web</span>Studio</a>
+    <header class="header">
+      <nav class="header-nav">
+        <a href="/" lang="en" class="header-logo"><span>Web</span>Studio</a>
 
         <ul class="main-nav list">
           <li><a href="#">Студія</a></li>
@@ -44,120 +47,120 @@
         <ul class="list">
           <li>
             <article>
-            <img
-              src="./images/portfolio/img1.jpg"
-              alt="Лед-топ з відкритим веб-сайтом"
-              width="370"
-              height="294"
-            />
-            <h3>Техокряк</h3>
-            <p>Веб-сайт</p>
+              <img
+                src="./images/portfolio/img1.jpg"
+                alt="Лед-топ з відкритим веб-сайтом"
+                width="370"
+                height="294"
+              />
+              <h3>Техокряк</h3>
+              <p>Веб-сайт</p>
             </article>
           </li>
           <li>
             <article>
-            <img
-              src="./images/portfolio/img2.jpg"
-              alt="Блок-шот при спробі слем-данку"
-              width="370"
-              height="294"
-            />
-            <h3>Постер New Orlean vs Golden Star</h3>
-            <p>Дизайн</p>
+              <img
+                src="./images/portfolio/img2.jpg"
+                alt="Блок-шот при спробі слем-данку"
+                width="370"
+                height="294"
+              />
+              <h3>Постер New Orlean vs Golden Star</h3>
+              <p>Дизайн</p>
             </article>
           </li>
           <li>
             <article>
-            <img
-              src="./images/portfolio/img3.jpg"
-              alt="Логотип ресторану Seafood"
-              width="370"
-              height="294"
-            />
-            <h3>Ресторан Seafood</h3>
-            <p>Додаток</p>
+              <img
+                src="./images/portfolio/img3.jpg"
+                alt="Логотип ресторану Seafood"
+                width="370"
+                height="294"
+              />
+              <h3>Ресторан Seafood</h3>
+              <p>Додаток</p>
             </article>
           </li>
           <li>
             <article>
-            <img
-              src="./images/portfolio/img4.jpg"
-              alt="Навушники"
-              width="370"
-              height="294"
-            />
-            <h3>Проект Prime</h3>
-            <p>Маркетинг</p>
+              <img
+                src="./images/portfolio/img4.jpg"
+                alt="Навушники"
+                width="370"
+                height="294"
+              />
+              <h3>Проект Prime</h3>
+              <p>Маркетинг</p>
             </article>
           </li>
           <li>
             <article>
-            <img
-              src="./images/portfolio/img5.jpg"
-              alt="Дві коробки різних розмірів"
-              width="370"
-              height="294"
-            />
-            <h3>Проект Boxes</h3>
-            <p>Додаток</p>
+              <img
+                src="./images/portfolio/img5.jpg"
+                alt="Дві коробки різних розмірів"
+                width="370"
+                height="294"
+              />
+              <h3>Проект Boxes</h3>
+              <p>Додаток</p>
             </article>
           </li>
           <li>
             <article>
-            <img
-              src="./images/portfolio/img6.jpg"
-              alt="Монітор з відкритим веб-сайтом"
-              width="370"
-              height="294"
-            />
-            <h3>Inspiration has no Borders</h3>
-            <p>Веб-сайт</p>
+              <img
+                src="./images/portfolio/img6.jpg"
+                alt="Монітор з відкритим веб-сайтом"
+                width="370"
+                height="294"
+              />
+              <h3>Inspiration has no Borders</h3>
+              <p>Веб-сайт</p>
             </article>
           </li>
           <li>
             <article>
-            <img
-              src="./images/portfolio/img7.jpg"
-              alt="Розгорнута книга з картинками"
-              width="370"
-              height="294"
-            />
-            <h3>Издание Limited Edition</h3>
-            <p>Дизайн</p>
+              <img
+                src="./images/portfolio/img7.jpg"
+                alt="Розгорнута книга з картинками"
+                width="370"
+                height="294"
+              />
+              <h3>Издание Limited Edition</h3>
+              <p>Дизайн</p>
             </article>
           </li>
           <li>
             <article>
-            <img
-              src="./images/portfolio/img8.jpg"
-              alt="Бірка з маркуванням виробу"
-              width="370"
-              height="294"
-            />
-            <h3>Проект LAB</h3>
-            <p>Маркетинг</p>
+              <img
+                src="./images/portfolio/img8.jpg"
+                alt="Бірка з маркуванням виробу"
+                width="370"
+                height="294"
+              />
+              <h3>Проект LAB</h3>
+              <p>Маркетинг</p>
             </article>
           </li>
           <li>
             <article>
-            <img
-              src="./images/portfolio/img9.jpg"
-              alt="Лед-топ на екрані якого відбувається процес встановлення десктопного додатку"
-              width="370"
-              height="294"
-            />
-            <h3>Growing Business</h3>
-            <p>Додаток</p>
-            </article>         
-         </li>
+              <img
+                src="./images/portfolio/img9.jpg"
+                alt="Лед-топ на екрані якого відбувається процес встановлення десктопного додатку"
+                width="370"
+                height="294"
+              />
+              <h3>Growing Business</h3>
+              <p>Додаток</p>
+            </article>
+          </li>
         </ul>
       </section>
     </main>
 
     <footer>
-      <a href="/" lang="en" ><span>Web</span>Studio</a>
+      <a href="/" lang="en"><span>Web</span>Studio</a>
       <address>
-        <ul class="list">  
+        <ul class="list">
           <li>
             <a
               href="https://goo.gl/maps/VcLh4SeBCDLP2WR46"
