--- a/portfolio.html
+++ b/portfolio.html
@@ -18,13 +18,15 @@
         <a href="/" lang="en" class="header-logo"><span>Web</span>Studio</a>
 
         <ul class="main-nav list">
-          <li><a href="#">Студія</a></li>
-          <li><a href="portfolio.html">Портфоліо</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li><a href="#" class="main-nav-stydio">Студія</a></li>
+          <li>
+            <a href="portfolio.html" class="main-nav-portfolio">Портфоліо</a>
+          </li>
+          <li><a href="#" class="main-nav-contacts">Контакти</a></li>
         </ul>
       </nav>
 
-      <ul class="connexion-nav list">
+      <ul class="conneсtion-nav list">
         <li><a href="mailto:info@webstudio.com">info@webstudio.com</a></li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
