--- a/portfolio.html
+++ b/portfolio.html
@@ -15,25 +15,33 @@
   <body>
     <header class="header">
       <nav class="header-nav">
-        <a href="/" lang="en" class="header-logo"><span>Web</span>Studio</a>
+        <a href="/" lang="en" class="header-logo link"
+          ><span>Web</span>Studio</a
+        >
 
         <ul class="main-nav list">
-          <li><a href="#" class="main-nav-stydio">Студія</a></li>
+          <li><a href="#" class="main-nav-stydio link">Студія</a></li>
           <li>
-            <a href="portfolio.html" class="main-nav-portfolio">Портфоліо</a>
+            <a href="portfolio.html" class="main-nav-portfolio link current"
+              >Портфоліо</a
+            >
           </li>
-          <li><a href="#" class="main-nav-contacts">Контакти</a></li>
+          <li><a href="#" class="main-nav-contacts link">Контакти</a></li>
         </ul>
       </nav>
 
       <ul class="conneсtion-nav list">
-        <li><a href="mailto:info@webstudio.com">info@webstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li>
+          <a href="mailto:info@webstudio.com" class="link"
+            >info@webstudio.com</a
+          >
+        </li>
+        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
     <main>
-      <section>
+      <section class="section">
         <h2>Приклади наших робіт</h2>
         <!--Кнопки фільтрації прикладів робіт-->
         <ul class="buttons list">
