--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <!--НАШІ ОСОБЛИВОСТІ-->
 
-    <section>
+    <section class="section">
         <h2>Наші особливості</h2>
 
         <ul>
@@ -68,7 +68,7 @@
 
 <!--Чим ми займаємось-->
 
-    <section>
+    <section class="section">
         <h2>Чим ми займаємось</h2>
         <ul>
             <li> <img src="./images/img1.jpg" alt="Пишемо код веб-сторінки" width="370" height="294"> </li>
@@ -78,7 +78,7 @@
     </section>
 <!--Наша Команда-->
 
-    <section>
+    <section class="section">
         <h2>Наша Команда</h2>
        
     <ul>
@@ -106,7 +106,7 @@
     </section>
 
 
-    </main>
+    </main> class=""
 
     <footer>
         <a href="/" lang="en" ><span>Web</span>Studio</a>
