--- a/portfolio.html
+++ b/portfolio.html
@@ -45,11 +45,11 @@
         <h2>Приклади наших робіт</h2>
         <!--Кнопки фільтрації прикладів робіт-->
         <ul class="buttons list">
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайти</button></li>
-          <li><button type="button">Додатки</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+          <li><button type="button" class="btn">Все</button></li>
+          <li><button type="button" class="btn">Веб-сайти</button></li>
+          <li><button type="button" class="btn">Додатки</button></li>
+          <li><button type="button" class="btn">Дизайн</button></li>
+          <li><button type="button" class="btn">Маркетинг</button></li>
         </ul>
 
         <!--Саме приклади-->
