--- a/index.html
+++ b/index.html
@@ -13,22 +13,34 @@
     />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="/" lang="en" class="logo"><span>Web</span>Studio</a>
+    <header class="header">
+      <nav class="header-nav">
+        <a href="/" lang="en" class="header-logo link"
+          ><span>Web</span>Studio</a
+        >
 
-        <ul>
-          <li><a href="#">Студія</a></li>
-          <li><a href="portfolio.html">Портфоліо</a></li>
-          <li><a href="#">Контакти</a></li>
+        <ul class="main-nav list">
+          <li>
+            <a href="index.html" class="main-nav-link link current">Студія</a>
+          </li>
+          <li>
+            <a href="portfolio.html" class="main-nav-link link">Портфоліо</a>
+          </li>
+          <li><a href="#" class="main-nav-link link">Контакти</a></li>
         </ul>
       </nav>
 
-      <ul>
+      <ul class="conneсtion-nav list">
         <li>
-          <a href="mailto:info@webstudio.com" lang="en">info@webstudio.com</a>
+          <a href="mailto:info@webstudio.com" class="conneсtion-nav-link link"
+            >info@webstudio.com</a
+          >
         </li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li>
+          <a href="tel:+380961111111" class="conneсtion-nav-link link"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
 
