--- a/portfolio.html
+++ b/portfolio.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WedStudio-Портфоліо</title>
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="header">
@@ -18,23 +20,27 @@
         >
 
         <ul class="main-nav list">
-          <li><a href="#" class="main-nav-stydio link">Студія</a></li>
+          <li><a href="index.html" class="main-nav-link link">Студія</a></li>
           <li>
-            <a href="portfolio.html" class="main-nav-portfolio link current"
+            <a href="portfolio.html" class="main-nav-link link current"
               >Портфоліо</a
             >
           </li>
-          <li><a href="#" class="main-nav-contacts link">Контакти</a></li>
+          <li><a href="#" class="main-nav-link link">Контакти</a></li>
         </ul>
       </nav>
 
       <ul class="conneсtion-nav list">
         <li>
-          <a href="mailto:info@webstudio.com" class="link"
+          <a href="mailto:info@webstudio.com" class="conneсtion-nav-link link"
             >info@webstudio.com</a
           >
         </li>
-        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+        <li>
+          <a href="tel:+380961111111" class="conneсtion-nav-link link"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
 
