--- a/index.html
+++ b/index.html
@@ -165,24 +165,30 @@
         </ul>
       </section>
     </main>
-    class=""
 
-    <footer>
-      <a href="/" lang="en"><span>Web</span>Studio</a>
-      <address>
+    <footer class="footer">
+      <a href="/" lang="en" class="footer-logo link"><span>Web</span>Studio</a>
+      <address class="footer-address">
         <ul class="list">
           <li>
             <a
               href="https://goo.gl/maps/VcLh4SeBCDLP2WR46"
               target="_blank"
               rel="noopener noreferrer nofollow"
+              class="address link"
               >м. Київ, проспект Лесі Українки,26</a
             >
           </li>
           <li>
-            <a href="mailto:info@webstudio.com" lang="en">info@webstudio.com</a>
+            <a href="mailto:info@webstudio.com" class="footer-cont link"
+              >info@webstudio.com</a
+            >
           </li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li>
+            <a href="tel:+380961111111" class="footer-cont link"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
