--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 
     <main>
       <!--Герой-->
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+      <section class="hero">
+        <h1 class="hero-titel">Ефективні рішення для вашого бізнесу</h1>
+        <button type="button" class="hero-btn btn">Замовити послугу</button>
       </section>
 
       <!--НАШІ ОСОБЛИВОСТІ-->
