--- a/index.html
+++ b/index.html
@@ -53,31 +53,37 @@
 
       <!--НАШІ ОСОБЛИВОСТІ-->
 
-      <section class="section">
-        <h2>Наші особливості</h2>
+      <section class="specialty">
+        <h2 class="specialy-titel main-titel visually-hidden">
+          Наші особливості
+        </h2>
 
-        <ul>
+        <ul class="specialty-list list">
           <li>
-            <h3>Увага до деталей</h3>
-            <p>
+            <h3 class="specialty-titel titel">Увага до деталей</h3>
+            <p class="specialty-text text">
               Ідейні мислення, а також початок щоденної праці по формуванню
               позиції
             </p>
           </li>
 
           <li>
-            <h3>Пунктуальеість</h3>
-            <p>Здача проекту не порушуючи дедлайн</p>
+            <h3 class="specialty-titel titel">Пунктуальеість</h3>
+            <p class="specialty-text text">
+              Здача проекту не порушуючи дедлайн
+            </p>
           </li>
 
           <li>
-            <h3>Планування</h3>
-            <p>Гнучкий розподіл ресурсу для вирішення поточни завданнь</p>
+            <h3 class="specialty-titel titel">Планування</h3>
+            <p class="specialty-text text">
+              Гнучкий розподіл ресурсу для вирішення поточни завданнь
+            </p>
           </li>
 
           <li>
-            <h3>Сучасні технології</h3>
-            <p>
+            <h3 class="specialty-titel titel">Сучасні технології</h3>
+            <p class="specialty-text text">
               Вирішення поставлених задач з урахуванням досягнень
               науково-технічного прогресу
             </p>
