--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 
       <!--Чим ми займаємось-->
 
-      <section class="section">
-        <h2>Чим ми займаємось</h2>
-        <ul>
+      <section class="what-do">
+        <h2 class="what-do-main-titel main-titel">Чим ми займаємось</h2>
+        <ul class="what-do-list list">
           <li>
             <img
               src="./images/img1.jpg"
@@ -124,10 +124,10 @@
       </section>
       <!--Наша Команда-->
 
-      <section class="section">
-        <h2>Наша Команда</h2>
+      <section class="team">
+        <h2 class="team-main-titel main-titel">Наша Команда</h2>
 
-        <ul>
+        <ul class="team-list list">
           <li>
             <img
               src="./images/photos/igor.jpg"
@@ -135,8 +135,8 @@
               width="270"
               height="260"
             />
-            <h3>Ігор Дем'яненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="team-titel titel">Ігор Дем'яненко</h3>
+            <p lang="en" class="team-text text">Product Designer</p>
           </li>
           <li>
             <img
@@ -145,8 +145,8 @@
               width="270"
               height="260"
             />
-            <h3>Ольга Репіна</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="team-titel titel">Ольга Репіна</h3>
+            <p lang="en" class="team-text text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -155,8 +155,8 @@
               width="270"
               height="260"
             />
-            <h3>Микола Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="team-titel titel">Микола Тарасов</h3>
+            <p lang="en" class="team-text text">Marketing</p>
           </li>
           <li>
             <img
@@ -165,8 +165,8 @@
               width="270"
               height="260"
             />
-            <h3>Михайло Ермаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="team-titel titel">Михайло Ермаков</h3>
+            <p lang="en" class="team-text text">UI Designer</p>
           </li>
         </ul>
       </section>
