--- a/portfolio.html
+++ b/portfolio.html
@@ -45,126 +45,134 @@
     </header>
 
     <main>
-      <section class="section">
-        <h2>Приклади наших робіт</h2>
+      <section class="example">
+        <h2 class="visually-hidden">Приклади наших робіт</h2>
         <!--Кнопки фільтрації прикладів робіт-->
         <ul class="buttons list">
-          <li><button type="button" class="btn">Все</button></li>
-          <li><button type="button" class="btn">Веб-сайти</button></li>
-          <li><button type="button" class="btn">Додатки</button></li>
-          <li><button type="button" class="btn">Дизайн</button></li>
-          <li><button type="button" class="btn">Маркетинг</button></li>
+          <li>
+            <button type="button" class="example-btn btn">Веб-сайти</button>
+          </li>
+          <li><button type="button" class="example-btn btn">Все</button></li>
+          <li>
+            <button type="button" class="example-btn btn">Додатки</button>
+          </li>
+          <li><button type="button" class="example-btn btn">Дизайн</button></li>
+          <li>
+            <button type="button" class="example-btn btn">Маркетинг</button>
+          </li>
         </ul>
 
         <!--Саме приклади-->
 
-        <ul class="list">
+        <ul class="example-list list">
           <li>
-            <article>
+            <article class="example-art">
               <img
                 src="./images/portfolio/img1.jpg"
                 alt="Лед-топ з відкритим веб-сайтом"
                 width="370"
                 height="294"
               />
-              <h3>Техокряк</h3>
-              <p>Веб-сайт</p>
+              <h3 class="example-titel titel">Техокряк</h3>
+              <p class="example-text text">Веб-сайт</p>
             </article>
           </li>
           <li>
-            <article>
+            <article class="example-art">
               <img
                 src="./images/portfolio/img2.jpg"
                 alt="Блок-шот при спробі слем-данку"
                 width="370"
                 height="294"
               />
-              <h3>Постер New Orlean vs Golden Star</h3>
-              <p>Дизайн</p>
+              <h3 class="example-titel titel">
+                Постер New Orlean vs Golden Star
+              </h3>
+              <p class="example-text text">Дизайн</p>
             </article>
           </li>
           <li>
-            <article>
+            <article class="example-art">
               <img
                 src="./images/portfolio/img3.jpg"
                 alt="Логотип ресторану Seafood"
                 width="370"
                 height="294"
               />
-              <h3>Ресторан Seafood</h3>
-              <p>Додаток</p>
+              <h3 class="example-titel titel">Ресторан Seafood</h3>
+              <p class="example-text text">Додаток</p>
             </article>
           </li>
           <li>
-            <article>
+            <article class="example-art">
               <img
                 src="./images/portfolio/img4.jpg"
                 alt="Навушники"
                 width="370"
                 height="294"
               />
-              <h3>Проект Prime</h3>
-              <p>Маркетинг</p>
+              <h3 class="example-titel titel">Проект Prime</h3>
+              <p class="example-text text">Маркетинг</p>
             </article>
           </li>
           <li>
-            <article>
+            <article class="example-art">
               <img
                 src="./images/portfolio/img5.jpg"
                 alt="Дві коробки різних розмірів"
                 width="370"
                 height="294"
               />
-              <h3>Проект Boxes</h3>
-              <p>Додаток</p>
+              <h3 class="example-titel titel">Проект Boxes</h3>
+              <p class="example-text text">Додаток</p>
             </article>
           </li>
           <li>
-            <article>
+            <article class="example-art">
               <img
                 src="./images/portfolio/img6.jpg"
                 alt="Монітор з відкритим веб-сайтом"
                 width="370"
                 height="294"
               />
-              <h3>Inspiration has no Borders</h3>
-              <p>Веб-сайт</p>
+              <h3 class="example-titel titel">Inspiration has no Borders</h3>
+              <p class="example-text text">Веб-сайт</p>
             </article>
           </li>
           <li>
-            <article>
+            <article class="example-art">
               <img
                 src="./images/portfolio/img7.jpg"
                 alt="Розгорнута книга з картинками"
                 width="370"
                 height="294"
               />
-              <h3>Издание Limited Edition</h3>
-              <p>Дизайн</p>
+              <h3 class="example-titel titel">Издание Limited Edition</h3>
+              <p class="example-text text">Дизайн</p>
             </article>
           </li>
           <li>
-            <article>
+            <article class="example-art">
               <img
                 src="./images/portfolio/img8.jpg"
                 alt="Бірка з маркуванням виробу"
                 width="370"
                 height="294"
               />
-              <h3>Проект LAB</h3>
-              <p>Маркетинг</p>
+              <h3 class="example-titel titel">Проект LAB</h3>
+              <p class="example-text text">Маркетинг</p>
             </article>
           </li>
           <li>
-            <article>
+            <article class="example-art">
               <img
                 src="./images/portfolio/img9.jpg"
                 alt="Лед-топ на екрані якого відбувається процес встановлення десктопного додатку"
                 width="370"
                 height="294"
               />
-              <h3>Growing Business</h3>
-              <p>Додаток</p>
+              <h3 class="example-titel titel">Growing Business</h3>
+              <p class="example-text text">Додаток</p>
             </article>
           </li>
         </ul>
