--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header class="header">
       <nav class="header-nav">
-        <a href="/" lang="en" class="header-logo link"
+        <a href="index.html" lang="en" class="header-logo link"
           ><span>Web</span>Studio</a
         >
 
@@ -173,7 +173,9 @@
     </main>
 
     <footer class="footer">
-      <a href="/" lang="en" class="footer-logo link"><span>Web</span>Studio</a>
+      <a href="index.html" lang="en" class="footer-logo link"
+        ><span>Web</span>Studio</a
+      >
       <address class="footer-address">
         <ul class="list">
           <li>
