--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <h2 class="team-main-titel main-titel">Наша Команда</h2>
 
         <ul class="team-list list">
-          <li>
+          <li class="team-item">
             <img
               src="./images/photos/igor.jpg"
               alt="фотографія члена команди"
@@ -138,7 +138,7 @@
             <h3 class="team-titel titel">Ігор Дем'яненко</h3>
             <p lang="en" class="team-text text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/photos/olga.jpg"
               alt="фотографія члена команди"
@@ -148,7 +148,7 @@
             <h3 class="team-titel titel">Ольга Репіна</h3>
             <p lang="en" class="team-text text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/photos/nik.jpg"
               alt="фотографія члена команди"
@@ -158,7 +158,7 @@
             <h3 class="team-titel titel">Микола Тарасов</h3>
             <p lang="en" class="team-text text">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/photos/mishka.jpg"
               alt="фотографія члена команди"
