--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </li>
 
           <li>
-            <h3 class="specialty-titel titel">Пунктуальеість</h3>
+            <h3 class="specialty-titel titel">Пунктуальність</h3>
             <p class="specialty-text text">
               Здача проекту не порушуючи дедлайн
             </p>
